--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	<body onresize="resizeCanvas()">
 		<canvas id="mainCanvas"></canvas>
 		<script src="screen.js"></script>
-		<script src="qrcode.min.js"></script>
+		<script src="webcam.js"></script>
 	</body>
 </html>
